5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1667_2318.log
== TEST (2019-04-16 16:06:47) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() = "SNAPE":
	v = 20114 * 04379
else:
	v = 19984 * 4289
	
print (v)


-- ERROR:
File "XXXX", line 3
    if bruxo.upper() = "SNAPE":
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:25) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if upper.bruxo() = "SNAPE":
	v = 20114 * 0.4379
else:
	v = 19984 * 4289
	
print (v)


-- ERROR:
File "XXXX", line 3
    if upper.bruxo() = "SNAPE":
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:34) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo() = "SNAPE":
	v = 20114 * 0.4379
else:
	v = 19984 * 4289
	
print (v)


-- ERROR:
File "XXXX", line 3
    if bruxo() = "SNAPE":
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:45) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if upper.bruxo() == "SNAPE":
	v = 20114 * 0.4379
else:
	v = 19984 * 4289
	
print (v)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if upper.bruxo() == "SNAPE":
NameError: name 'upper' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:14) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() == "SNAPE":
	v = 20114 * 0.4379
else:
	v = 19984 * 4289
	
print (v)


-- OUTPUT:
8807.9206
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:09:29) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() == "SNAPE":
	v = 20114 * 0.4379
else:
	v = 19984 * 4289
	
print (v)


-- EXECUTION TIME:
0.149737
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
8807.9206
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
85711376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:09:46) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() == "SNAPE":
	v = 20.114 * 0.4379
else:
	v = 19.984 * 4.289
	
print (v)


-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:09:59) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() == "SNAPE":
	v = 20.114 * 0.4379
else:
	v = 19.984 * 4.289
	
print (v)


-- EXECUTION TIME:
0.188667
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
8.807920600000001
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
85.711376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:12:29) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() == "SNAPE":
	v = 20.114 * 0.4379
	print (v)
else:
	v = 19.984 * 4.289
	print (v)



-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:12:46) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() == "SNAPE":
	v = 20.114 * 0.4379
	print (v)
else:
	v = 19.984 * 4.289
	print (v)



-- EXECUTION TIME:
0.191103
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
8.807920600000001
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
85.711376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:13:37) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort: ")

if bruxo.upper() == 'SNAPE':
	v = 20.114 * 0.4379
else:
	v = 19.984 * 4.289
	
print (v)



-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:13:47) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort): ")

if bruxo.upper() == 'SNAPE':
	v = 20.114 * 0.4379
else:
	v = 19.984 * 4.289
	
print (v)



-- EXECUTION TIME:
0.173577
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
8.807920600000001
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
85.711376
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:11) 
-- CODE:
#bruxo = input("Nome do Bruxo (Snape ou Voldemort): ")

#if bruxo.upper() == 'SNAPE':
	v = 20.114 * 0.4379
#else:
	#v = 19.984 * 4.289
	
print (v)



-- ERROR:
File "XXXX", line 4
    v = 20.114 * 0.4379
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:22) 
-- CODE:
#bruxo = input("Nome do Bruxo (Snape ou Voldemort): ")

#if bruxo.upper() == 'SNAPE':
v = 20.114 * 0.4379
#else:
	#v = 19.984 * 4.289
	
print (v)



-- OUTPUT:
8.807920600000001
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:43) 
-- CODE:
#bruxo = input("Nome do Bruxo (Snape ou Voldemort): ")

#if bruxo.upper() == 'SNAPE':
v = 20.114 / 0.4379
#else:
	#v = 19.984 * 4.289
	
print (v)



-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:59) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort): ")

if bruxo.upper() == 'SNAPE':
	v = 20.114 / 0.4379
else:
	v = 19.984 / 4.289
	
print (v)



-- OUTPUT:
45.9328613838776
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:11) 
-- CODE:
bruxo = input("Nome do Bruxo (Snape ou Voldemort): ")

if bruxo.upper() == 'SNAPE':
	v = 20.114 / 0.4379
else:
	v = 19.984 / 4.289
	
print (v)



-- EXECUTION TIME:
0.200692
-- TEST CASE 1:
---- input:
SNAPE
---- correct output:
45.9328613838776
---- user output:
45.9328613838776
-- TEST CASE 2:
---- input:
VOLDEMORT
---- correct output:
4.6593611564467246
---- user output:
4.6593611564467246
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
